--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <header>
-    <p>
-        Lincoln Santos
-        Brasileiro
-        linkyn91@gmail.com
-        02/08/1991
-    </p>
+    <h1>Lincoln Santos</h1>
+        <p>Brasileiro <br>
+        linkyn91@gmail.com <br>
+        02/08/1991 <br>
+        </p>
 </header>
 <nav>
     <a href="#">Portifólio</a>
@@ -34,4 +33,7 @@
 
     <p>Thank you for visiting my site and getting to know a bit more about me. I am looking forward to the opportunities that the future holds. Feel free to explore other sections of the site to learn more about my journey and skills.</p>
 </body>
+<footer>
+    <p>Resume developed by <a href="https://github.com/linkyn91" target="_blank" class="externo">Lincoln Santos</a></p>
+</footer>
 </html>
