--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,30 +8,40 @@
 </head>
 <header>
     <h1>Lincoln Santos</h1>
-        <p>Brasileiro <br>
-        linkyn91@gmail.com <br>
+        <p>Brasilian<br>
         02/08/1991 <br>
         </p>
 </header>
 <nav>
-    <a href="#">Portifólio</a>
-    <a href="#">Formação</a>
-    <a href="#">Linguas</a>
-    <a href="#">Obejetivos</a>
-    <a href="#">Softs Skills</a>
+    <a href="#">HOME</a>
+    <a href="#">PORTFOLIO</a>
+    <a href="#">CONTACT</a>
 </nav>
 <body>
-    <p>Hello! I hope you're having a great day. My name is Lincoln, I'm 32 years old, and I've been a public servant in the state of Paraná, Brazil, for 10 years. My professional journey has been entirely dedicated to the public administration of health.</p>
+    <p>Hello! I hope you're having a great day.</p>
 
-    <p>Recently, I completed my degree in Systems Analysis and Development (ADS). However, I realized that, due to the nature of public competitions, my current field no longer offers opportunities for growth. I am constantly seeking to enhance my knowledge and achieve a more comprehensive professional development.</p>
+    <p>My name is Lincoln, and I'm 32 years old. I've been a public servant in the state of Paraná, Brazil, for 10 years, entirely dedicated to the administrative public health sector.</p>
 
-    <p>With determination, teamwork skills, patience, and a passion for interacting with people, I face new challenges every day. My goal is to transition to the field of Information Technology (IT), where I see an environment conducive to personal, professional, and financial growth.</p>
+    <p>Recognizing that the nature of public exams limits growth opportunities, I recently graduated in Systems Analysis and Development. I am continuously seeking to enhance my knowledge and professional growth. Currently, I am studying and practicing daily through online courses to transition to the IT field, where I perceive a conducive environment for personal, professional, and financial growth.</p>
 
-    <p>Additionally, I have intermediate proficiency in English and dedicate part of my day to improving my speaking skills. However, my current challenge and objective are to secure an international job, receiving payment in foreign currency. Due to the devaluation of salaries in my country, I am seeking opportunities that can provide fair compensation.</p>
+    <p>In terms of skills and abilities:</p>
 
-    <p>I am willing to start either remotely or on-site, if necessary and feasible. This decision not only represents a personal challenge but also a pursuit of new perspectives and professional achievements.</p>
+    <ul>
+        <li>I have intermediate English proficiency and dedicate daily time to improving my speaking skills.</li>
+        <li>I am a determined individual, work well in a team, am patient, and enjoy interacting with people.</li>
+        <li>I thrive on facing new challenges and maintain a constant desire to learn new things.</li>
+    </ul>
 
-    <p>Thank you for visiting my site and getting to know a bit more about me. I am looking forward to the opportunities that the future holds. Feel free to explore other sections of the site to learn more about my journey and skills.</p>
+    <p>My current challenge and objective include:</p>
+    <ul>
+        <li>Overcoming the obstacle of securing a good international job without prior experience, with the aim of receiving payment in foreign currency.</li>
+        <li>Due to the salary devaluation in my country, seeking opportunities abroad is a strategy to achieve fair compensation.</li>
+        <li>I am willing to start either remotely or on-site, if necessary and viable.</li>
+        <li>Fearlessly, I am here, taking risks to give my best and secure my first international job.</li>
+    </ul>
+
+    <p>I appreciate your visit to my site and for getting to know a bit more about me. I am eagerly anticipating the opportunities that the future holds. Feel free to explore other sections of the site to discover more about my journey and skills.</p>
+    
 </body>
 <footer>
     <p>Resume developed by <a href="https://github.com/linkyn91" target="_blank" class="externo">Lincoln Santos</a></p>
